Correction de l'alignement du logo

--- a/public/style/components/header.scss
+++ b/public/style/components/header.scss
@@ -41,7 +41,7 @@ $hover-color: rgba(205, 205, 205, 0.3);
 
     @media screen and (max-width: 700px) {
       font-size: $mobile-h1;
-      top: 3%;
+      top: 2%;
       left: 4%;
 
       &.opened {
